embed_script = files('embed_resource.sh')

resource_specs = [
  ['nnedi3_weights', '../resource/nnedi3_weights.bin', 'resource_nnedi3_weights_bin'],
  ['perf_monitor', '../PerfMonitor/perf_monitor.pyw', 'PerfMonitor_perf_monitor_pyw'],
  ['rgy_filter_colorspace_func', '../VCECore/rgy_filter_colorspace_func.h', 'VCECore_rgy_filter_colorspace_func_h'],
  ['clrng_clh', '../clRNG/src/include/clRNG/clRNG.clh', 'clRNG_src_include_clRNG_clRNG_clh'],
  ['clrng_mrg31k3p_clh', '../clRNG/src/include/clRNG/mrg31k3p.clh', 'clRNG_src_include_clRNG_mrg31k3p_clh'],
  ['clrng_private_mrg31k3p_ch', '../clRNG/src/include/clRNG/private/mrg31k3p.c.h', 'clRNG_src_include_clRNG_private_mrg31k3p_c_h'],
  ['rgy_filter_cl', '../VCECore/rgy_filter.cl', 'VCECore_rgy_filter_cl'],
  ['rgy_filter_afs_analyze_cl', '../VCECore/rgy_filter_afs_analyze.cl', 'VCECore_rgy_filter_afs_analyze_cl'],
  ['rgy_filter_afs_filter_cl', '../VCECore/rgy_filter_afs_filter.cl', 'VCECore_rgy_filter_afs_filter_cl'],
  ['rgy_filter_afs_merge_cl', '../VCECore/rgy_filter_afs_merge.cl', 'VCECore_rgy_filter_afs_merge_cl'],
  ['rgy_filter_afs_synthesize_cl', '../VCECore/rgy_filter_afs_synthesize.cl', 'VCECore_rgy_filter_afs_synthesize_cl'],
  ['rgy_filter_convolution3d_cl', '../VCECore/rgy_filter_convolution3d.cl', 'VCECore_rgy_filter_convolution3d_cl'],
  ['rgy_filter_curves_cl', '../VCECore/rgy_filter_curves.cl', 'VCECore_rgy_filter_curves_cl'],
  ['rgy_filter_deband_cl', '../VCECore/rgy_filter_deband.cl', 'VCECore_rgy_filter_deband_cl'],
  ['rgy_filter_deband_gen_rand_cl', '../VCECore/rgy_filter_deband_gen_rand.cl', 'VCECore_rgy_filter_deband_gen_rand_cl'],
  ['rgy_filter_decimate_cl', '../VCECore/rgy_filter_decimate.cl', 'VCECore_rgy_filter_decimate_cl'],
  ['rgy_filter_decomb_cl', '../VCECore/rgy_filter_decomb.cl', 'VCECore_rgy_filter_decomb_cl'],
  ['rgy_filter_delogo_cl', '../VCECore/rgy_filter_delogo.cl', 'VCECore_rgy_filter_delogo_cl'],
  ['rgy_filter_denoise_dct_cl', '../VCECore/rgy_filter_denoise_dct.cl', 'VCECore_rgy_filter_denoise_dct_cl'],
  ['rgy_filter_denoise_fft3d_cl', '../VCECore/rgy_filter_denoise_fft3d.cl', 'VCECore_rgy_filter_denoise_fft3d_cl'],
  ['rgy_filter_denoise_knn_cl', '../VCECore/rgy_filter_denoise_knn.cl', 'VCECore_rgy_filter_denoise_knn_cl'],
  ['rgy_filter_denoise_nlmeans_cl', '../VCECore/rgy_filter_denoise_nlmeans.cl', 'VCECore_rgy_filter_denoise_nlmeans_cl'],
  ['rgy_filter_denoise_pmd_cl', '../VCECore/rgy_filter_denoise_pmd.cl', 'VCECore_rgy_filter_denoise_pmd_cl'],
  ['rgy_filter_edgelevel_cl', '../VCECore/rgy_filter_edgelevel.cl', 'VCECore_rgy_filter_edgelevel_cl'],
  ['rgy_filter_mpdecimate_cl', '../VCECore/rgy_filter_mpdecimate.cl', 'VCECore_rgy_filter_mpdecimate_cl'],
  ['rgy_filter_nnedi_common_cl', '../VCECore/rgy_filter_nnedi_common.cl', 'VCECore_rgy_filter_nnedi_common_cl'],
  ['rgy_filter_nnedi_k0_cl', '../VCECore/rgy_filter_nnedi_k0.cl', 'VCECore_rgy_filter_nnedi_k0_cl'],
  ['rgy_filter_nnedi_k1_cl', '../VCECore/rgy_filter_nnedi_k1.cl', 'VCECore_rgy_filter_nnedi_k1_cl'],
  ['rgy_filter_overlay_cl', '../VCECore/rgy_filter_overlay.cl', 'VCECore_rgy_filter_overlay_cl'],
  ['rgy_filter_pad_cl', '../VCECore/rgy_filter_pad.cl', 'VCECore_rgy_filter_pad_cl'],
  ['rgy_filter_resize_cl', '../VCECore/rgy_filter_resize.cl', 'VCECore_rgy_filter_resize_cl'],
  ['rgy_filter_ssim_cl', '../VCECore/rgy_filter_ssim.cl', 'VCECore_rgy_filter_ssim_cl'],
  ['rgy_filter_smooth_cl', '../VCECore/rgy_filter_smooth.cl', 'VCECore_rgy_filter_smooth_cl'],
  ['rgy_filter_subburn_cl', '../VCECore/rgy_filter_subburn.cl', 'VCECore_rgy_filter_subburn_cl'],
  ['rgy_filter_transform_cl', '../VCECore/rgy_filter_transform.cl', 'VCECore_rgy_filter_transform_cl'],
  ['rgy_filter_tweak_cl', '../VCECore/rgy_filter_tweak.cl', 'VCECore_rgy_filter_tweak_cl'],
  ['rgy_filter_unsharp_cl', '../VCECore/rgy_filter_unsharp.cl', 'VCECore_rgy_filter_unsharp_cl'],
  ['rgy_filter_warpsharp_cl', '../VCECore/rgy_filter_warpsharp.cl', 'VCECore_rgy_filter_warpsharp_cl'],
  ['rgy_filter_yadif_cl', '../VCECore/rgy_filter_yadif.cl', 'VCECore_rgy_filter_yadif_cl'],
]

resource_objects = []
foreach spec : resource_specs
  resource_objects += custom_target('embed_' + spec[0],
    input: spec[1],
    output: spec[0] + '.o',
    command: ['bash', embed_script, '@INPUT@', '@OUTPUT@', spec[2]],
  )
endforeach
