embed_script = files('embed_resource.sh')

resource_specs = [
  ['nnedi3_weights', '../resource/nnedi3_weight/nnedi3_weights.bin', 'resource_nnedi3_weights_bin'],
  ['perf_monitor', '../PerfMonitor/perf_monitor.pyw', 'PerfMonitor_perf_monitor_pyw'],
  ['cl_perf_common_py', '../cl_perf/cl_perf_common.py', 'cl_perf_cl_perf_common_py'],
  ['cl_perf_aggregate_py', '../cl_perf/cl_perf_aggregate.py', 'cl_perf_cl_perf_aggregate_py'],
  ['cl_perf_report_py', '../cl_perf/cl_perf_report.py', 'cl_perf_cl_perf_report_py'],
  ['cl_perf_arch_table_json', '../cl_perf/arch_table.json', 'cl_perf_arch_table_json'],
  ['rgy_filter_colorspace_func', '../VCECore/rgy_filter_colorspace_func.h', 'VCECore_rgy_filter_colorspace_func_h'],
  ['clrng_clh', '../clRNG/src/include/clRNG/clRNG.clh', 'clRNG_src_include_clRNG_clRNG_clh'],
  ['clrng_mrg31k3p_clh', '../clRNG/src/include/clRNG/mrg31k3p.clh', 'clRNG_src_include_clRNG_mrg31k3p_clh'],
  ['clrng_private_mrg31k3p_ch', '../clRNG/src/include/clRNG/private/mrg31k3p.c.h', 'clRNG_src_include_clRNG_private_mrg31k3p_c_h'],
  ['rgy_dummy_load_cl', '../VCECore/rgy_dummy_load.cl', 'VCECore_rgy_dummy_load_cl'],
  ['rgy_filter_cl', '../VCECore/rgy_filter.cl', 'VCECore_rgy_filter_cl'],
  ['rgy_filter_afs_analyze_cl', '../VCECore/rgy_filter_afs_analyze.cl', 'VCECore_rgy_filter_afs_analyze_cl'],
  ['rgy_filter_afs_filter_cl', '../VCECore/rgy_filter_afs_filter.cl', 'VCECore_rgy_filter_afs_filter_cl'],
  ['rgy_filter_afs_merge_cl', '../VCECore/rgy_filter_afs_merge.cl', 'VCECore_rgy_filter_afs_merge_cl'],
  ['rgy_filter_afs_synthesize_cl', '../VCECore/rgy_filter_afs_synthesize.cl', 'VCECore_rgy_filter_afs_synthesize_cl'],
  ['rgy_filter_bwdif_cl', '../VCECore/rgy_filter_bwdif.cl', 'VCECore_rgy_filter_bwdif_cl'],
  ['rgy_filter_convolution3d_cl', '../VCECore/rgy_filter_convolution3d.cl', 'VCECore_rgy_filter_convolution3d_cl'],
  ['rgy_filter_curves_cl', '../VCECore/rgy_filter_curves.cl', 'VCECore_rgy_filter_curves_cl'],
  ['rgy_filter_deband_cl', '../VCECore/rgy_filter_deband.cl', 'VCECore_rgy_filter_deband_cl'],
  ['rgy_filter_deband_gen_rand_cl', '../VCECore/rgy_filter_deband_gen_rand.cl', 'VCECore_rgy_filter_deband_gen_rand_cl'],
  ['rgy_filter_decimate_cl', '../VCECore/rgy_filter_decimate.cl', 'VCECore_rgy_filter_decimate_cl'],
  ['rgy_filter_decomb_cl', '../VCECore/rgy_filter_decomb.cl', 'VCECore_rgy_filter_decomb_cl'],
  ['rgy_filter_delogo_cl', '../VCECore/rgy_filter_delogo.cl', 'VCECore_rgy_filter_delogo_cl'],
  ['rgy_filter_denoise_dct_cl', '../VCECore/rgy_filter_denoise_dct.cl', 'VCECore_rgy_filter_denoise_dct_cl'],
  ['rgy_filter_denoise_fft3d_cl', '../VCECore/rgy_filter_denoise_fft3d.cl', 'VCECore_rgy_filter_denoise_fft3d_cl'],
  ['rgy_filter_denoise_hqdn3d_cl', '../VCECore/rgy_filter_denoise_hqdn3d.cl', 'VCECore_rgy_filter_denoise_hqdn3d_cl'],
  ['rgy_filter_denoise_knn_cl', '../VCECore/rgy_filter_denoise_knn.cl', 'VCECore_rgy_filter_denoise_knn_cl'],
  ['rgy_filter_denoise_nlmeans_cl', '../VCECore/rgy_filter_denoise_nlmeans.cl', 'VCECore_rgy_filter_denoise_nlmeans_cl'],
  ['rgy_filter_denoise_pmd_cl', '../VCECore/rgy_filter_denoise_pmd.cl', 'VCECore_rgy_filter_denoise_pmd_cl'],
  ['rgy_filter_degrain_cl', '../VCECore/rgy_filter_degrain.cl', 'VCECore_rgy_filter_degrain_cl'],
  ['rgy_filter_degrain_common_cl', '../VCECore/rgy_filter_degrain_common.cl', 'VCECore_rgy_filter_degrain_common_cl'],
  ['rgy_filter_degrain_mvkernel_types_cl', '../VCECore/rgy_filter_degrain_mvkernel_types.cl', 'VCECore_rgy_filter_degrain_mvkernel_types_cl'],
  ['rgy_filter_degrain_mvkernel_sad_cl', '../VCECore/rgy_filter_degrain_mvkernel_sad.cl', 'VCECore_rgy_filter_degrain_mvkernel_sad_cl'],
  ['rgy_filter_degrain_mvkernel_prepare_cl', '../VCECore/rgy_filter_degrain_mvkernel_prepare.cl', 'VCECore_rgy_filter_degrain_mvkernel_prepare_cl'],
  ['rgy_filter_degrain_mvkernel_search_cl', '../VCECore/rgy_filter_degrain_mvkernel_search.cl', 'VCECore_rgy_filter_degrain_mvkernel_search_cl'],
  ['rgy_filter_degrain_mvkernel_calc_sad_cl', '../VCECore/rgy_filter_degrain_mvkernel_calc_sad.cl', 'VCECore_rgy_filter_degrain_mvkernel_calc_sad_cl'],
  ['rgy_filter_degrain_mvkernel_interpolate_cl', '../VCECore/rgy_filter_degrain_mvkernel_interpolate.cl', 'VCECore_rgy_filter_degrain_mvkernel_interpolate_cl'],
  ['rgy_filter_degrain_analyze_cl', '../VCECore/rgy_filter_degrain_analyze.cl', 'VCECore_rgy_filter_degrain_analyze_cl'],
  ['rgy_filter_degrain_render_cl', '../VCECore/rgy_filter_degrain_render.cl', 'VCECore_rgy_filter_degrain_render_cl'],
  ['rgy_filter_degrain_debug_cl', '../VCECore/rgy_filter_degrain_debug.cl', 'VCECore_rgy_filter_degrain_debug_cl'],
  ['rgy_filter_rtgmc_border_cl', '../VCECore/rgy_filter_rtgmc_border.cl', 'VCECore_rgy_filter_rtgmc_border_cl'],
  ['rgy_filter_rtgmc_search_prefilter_cl', '../VCECore/rgy_filter_rtgmc_search_prefilter.cl', 'VCECore_rgy_filter_rtgmc_search_prefilter_cl'],
  ['rgy_filter_rtgmc_edi_cl', '../VCECore/rgy_filter_rtgmc_edi.cl', 'VCECore_rgy_filter_rtgmc_edi_cl'],
  ['rgy_filter_kfm_common_cl', '../VCECore/rgy_filter_kfm_common.cl', 'VCECore_rgy_filter_kfm_common_cl'],
  ['rgy_filter_kfm_pad_cl', '../VCECore/rgy_filter_kfm_pad.cl', 'VCECore_rgy_filter_kfm_pad_cl'],
  ['rgy_filter_kfm_static_cl', '../VCECore/rgy_filter_kfm_static.cl', 'VCECore_rgy_filter_kfm_static_cl'],
  ['rgy_filter_kfm_analyze_cl', '../VCECore/rgy_filter_kfm_analyze.cl', 'VCECore_rgy_filter_kfm_analyze_cl'],
  ['rgy_filter_kfm_render_cl', '../VCECore/rgy_filter_kfm_render.cl', 'VCECore_rgy_filter_kfm_render_cl'],
  ['rgy_filter_kfm_mask_cl', '../VCECore/rgy_filter_kfm_mask.cl', 'VCECore_rgy_filter_kfm_mask_cl'],
  ['rgy_filter_kfm_switch_cl', '../VCECore/rgy_filter_kfm_switch.cl', 'VCECore_rgy_filter_kfm_switch_cl'],
  ['rgy_filter_kfm_ucf_cl', '../VCECore/rgy_filter_kfm_ucf.cl', 'VCECore_rgy_filter_kfm_ucf_cl'],
  ['rgy_filter_rtgmc_retouch_cl', '../VCECore/rgy_filter_rtgmc_retouch.cl', 'VCECore_rgy_filter_rtgmc_retouch_cl'],
  ['rgy_filter_rtgmc_shimmer_repair_cl', '../VCECore/rgy_filter_rtgmc_shimmer_repair.cl', 'VCECore_rgy_filter_rtgmc_shimmer_repair_cl'],
  ['rgy_filter_rtgmc_lossless_cl', '../VCECore/rgy_filter_rtgmc_lossless.cl', 'VCECore_rgy_filter_rtgmc_lossless_cl'],
  ['rgy_filter_rtgmc_primitive_cl', '../VCECore/rgy_filter_rtgmc_primitive.cl', 'VCECore_rgy_filter_rtgmc_primitive_cl'],
  ['rgy_filter_rtgmc_mmask_cl', '../VCECore/rgy_filter_rtgmc_mmask.cl', 'VCECore_rgy_filter_rtgmc_mmask_cl'],
  ['rgy_filter_edgelevel_cl', '../VCECore/rgy_filter_edgelevel.cl', 'VCECore_rgy_filter_edgelevel_cl'],
  ['rgy_filter_chromashift_cl', '../VCECore/rgy_filter_chromashift.cl', 'VCECore_rgy_filter_chromashift_cl'],
  ['rgy_filter_deblock_cl', '../VCECore/rgy_filter_deblock.cl', 'VCECore_rgy_filter_deblock_cl'],
  ['rgy_filter_dehalo_cl', '../VCECore/rgy_filter_dehalo.cl', 'VCECore_rgy_filter_dehalo_cl'],
  ['rgy_filter_finedehalo_cl', '../VCECore/rgy_filter_finedehalo.cl', 'VCECore_rgy_filter_finedehalo_cl'],
  ['rgy_filter_hqdering_cl', '../VCECore/rgy_filter_hqdering.cl', 'VCECore_rgy_filter_hqdering_cl'],
  ['rgy_filter_deflicker_cl', '../VCECore/rgy_filter_deflicker.cl', 'VCECore_rgy_filter_deflicker_cl'],
  ['rgy_filter_stab_cl', '../VCECore/rgy_filter_stab.cl', 'VCECore_rgy_filter_stab_cl'],
  ['rgy_filter_colorfix_cl', '../VCECore/rgy_filter_colorfix.cl', 'VCECore_rgy_filter_colorfix_cl'],
  ['rgy_filter_ivtc_cl', '../VCECore/rgy_filter_ivtc.cl', 'VCECore_rgy_filter_ivtc_cl'],
  ['rgy_filter_rtgmc_bob_cl', '../VCECore/rgy_filter_rtgmc_bob.cl', 'VCECore_rgy_filter_rtgmc_bob_cl'],
  ['rgy_filter_maa_cl', '../VCECore/rgy_filter_maa.cl', 'VCECore_rgy_filter_maa_cl'],
  ['rgy_filter_msharpen_cl', '../VCECore/rgy_filter_msharpen.cl', 'VCECore_rgy_filter_msharpen_cl'],
  ['rgy_filter_msmooth_cl', '../VCECore/rgy_filter_msmooth.cl', 'VCECore_rgy_filter_msmooth_cl'],
  ['rgy_filter_mpdecimate_cl', '../VCECore/rgy_filter_mpdecimate.cl', 'VCECore_rgy_filter_mpdecimate_cl'],
  ['rgy_filter_nnedi_cl', '../VCECore/rgy_filter_nnedi.cl', 'VCECore_rgy_filter_nnedi_cl'],
  ['rgy_filter_overlay_cl', '../VCECore/rgy_filter_overlay.cl', 'VCECore_rgy_filter_overlay_cl'],
  ['rgy_filter_pad_cl', '../VCECore/rgy_filter_pad.cl', 'VCECore_rgy_filter_pad_cl'],
  ['rgy_filter_resize_cl', '../VCECore/rgy_filter_resize.cl', 'VCECore_rgy_filter_resize_cl'],
  ['rgy_filter_ssim_cl', '../VCECore/rgy_filter_ssim.cl', 'VCECore_rgy_filter_ssim_cl'],
  ['rgy_filter_smooth_cl', '../VCECore/rgy_filter_smooth.cl', 'VCECore_rgy_filter_smooth_cl'],
  ['rgy_filter_subburn_cl', '../VCECore/rgy_filter_subburn.cl', 'VCECore_rgy_filter_subburn_cl'],
  ['rgy_filter_transform_cl', '../VCECore/rgy_filter_transform.cl', 'VCECore_rgy_filter_transform_cl'],
  ['rgy_filter_tweak_cl', '../VCECore/rgy_filter_tweak.cl', 'VCECore_rgy_filter_tweak_cl'],
  ['rgy_filter_unsharp_cl', '../VCECore/rgy_filter_unsharp.cl', 'VCECore_rgy_filter_unsharp_cl'],
  ['rgy_filter_vinverse_cl', '../VCECore/rgy_filter_vinverse.cl', 'VCECore_rgy_filter_vinverse_cl'],
  ['rgy_filter_warpsharp_cl', '../VCECore/rgy_filter_warpsharp.cl', 'VCECore_rgy_filter_warpsharp_cl'],
  ['rgy_filter_yadif_cl', '../VCECore/rgy_filter_yadif.cl', 'VCECore_rgy_filter_yadif_cl'],
]

resource_objects = []
foreach spec : resource_specs
  resource_objects += custom_target('embed_' + spec[0],
    input: spec[1],
    output: spec[0] + '.o',
    command: ['bash', embed_script, '@INPUT@', '@OUTPUT@', spec[2]],
  )
endforeach
